getting deployment automated

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "work",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
+  },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10"
   },
+  "homepage": "https://godspeed.team/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
