--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.0.0",
+    "react-scripts": "1.0.10"
   },
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-dom": "^15.6.1"
   },
   "homepage": "https://godspeed.team/",
   "scripts": {
