--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUBTOKEN
   local_dir: build
+  target_branch: master
   on:
-    branch: master
+    branch: dev
