--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "godspeed.team",
+  "name": "Work as a team world wide",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
+      "sizes": "16x16 32x32 48x48 64x64",
+      "type": "image/vnd.microsoft.icon"
     }
   ],
   "start_url": "./index.html",
